# batchopt

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
src/batchopt/: ANI2xt_rep.py  __init__.py  batchopt.py  model_registry.py  model_registry.yaml
src/batchopt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test.py
