[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "batchopt"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "rdkit>=2024",
    "numpy",
    "torch",
    "pytest",
    ]
authors = [{name = "Sung-Hun Bae", email="sunghun.bae@gmail.com"}, ]
maintainers = [{name = "Sung-Hun Bae", email="sunghun.bae@gmail.com"}, ]
description = "Batch optimizer for AIMNet2"
readme = "README.md"
license = "MIT"
keywords = ["optimize", "singlepoint", "aimnet2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    ]

[project.urls]
Homepage        = "https://github.com/sunghunbae/batchopt"
Repository      = "https://github.com/sunghunbae/batchopt.git"
Issues          = "https://github.com/sunghunbae/batchopt/issues"
Changelog       = "https://github.com/sunghunbae/batchopt/blob/master/CHANGELOG.md"

[project.scripts]

[tool.setuptools.dynamic]
version = {attr = "batchopt.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
